[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/background/roadway.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/FinishLine.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/theme_song.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/score.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/victory.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Car.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Roadway" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 590, 690 )
z_index = 2
walk_speed = 3

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 690, 690 )
z_index = 2
walk_speed = 3
player = 2

[node name="FinishLine" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 56 )
z_index = 1

[node name="Car" parent="." instance=ExtResource( 9 )]
visible = false
z_index = 1

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="TimerSlowCars" type="Timer" parent="."]
wait_time = 0.5

[node name="TimerFastCars" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioThemeSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AudioVictory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="score" from="Player" to="." method="_on_Player_score"]
[connection signal="body_entered" from="Player2" to="Player2" method="_on_Player_body_entered"]
[connection signal="score" from="Player2" to="." method="_on_Player2_score"]
[connection signal="restart" from="HUD" to="." method="_on_HUD_restart"]
[connection signal="timeout" from="TimerSlowCars" to="." method="_on_TimerSlowCars_timeout"]
[connection signal="timeout" from="TimerFastCars" to="." method="_on_TimerFastCars_timeout"]
